--- a/variables.env
+++ b/variables.env
@@ -2,8 +2,14 @@
 # This file will be sourced inside the project container when started.
 # NOTE: If you change this file while the project is running, you must restart the project container for changes to take effect.
 
-META_LLAMA3_8B_INSTRUCT_NIM_GPUS=all
-META_LLAMA3_8B_INSTRUCT_NIM_VERSION=1.0.0
 MILVUS_VERSION=v2.4.0
+APP_MILVUS__URL=http://milvus:19530
+APP_REDIS_DSN=redis://redis:6379/0
 NGC_CLI_ORG=default
 NGC_HOME=~/.cache/nvidia-nims
+LLM_NIM_0_MODEL=meta/llama3-8b-instruct
+LLM_NIM_0_NIM_VERSION=1.0.0
+LLM_NIM_0_NIM_GPUS=all
+LLM_NIM_1_MODEL=meta/llama3-8b-instruct
+LLM_NIM_1_NIM_VERSION=1.0.0
+LLM_NIM_1_NIM_GPUS=all
