--- a/variables.env
+++ b/variables.env
@@ -13,3 +13,4 @@ LLM_NIM_0_NIM_GPUS=all
 LLM_NIM_1_MODEL=meta/llama3-8b-instruct
 LLM_NIM_1_NIM_VERSION=1.0.0
 LLM_NIM_1_NIM_GPUS=all
+SHELL=/bin/bash
