Add Python Linting Pipeline (#21)
Added Python linters and updated code to meet new requirements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,13 +57,13 @@
     //  Comment out this settings to disable auto-formatting
     "editor.formatOnSave": true
   },
-  "mypy-type-checker.severity": {
-    "error": "Hint",
-    "note": "Hint"
-  },
+
   "black-formatter.serverTransport": "stdio",
   "black-formatter.args": [
     "--line-length",
     "120"
   ],
+  "pylint.severity": {
+    "refactor": "Information",
+  },
 }
