Enable local embed rerank (#33)
This conflicts with https://github.com/NVIDIA/nim-anywhere/pull/31 and
is submitted because it synch's the style and feel of embed and rerank
shell scripts with those for the LLM-0 and LLM-1. It also adds the
healthcheck which wasn't present in the scripts in PR31

--- a/variables.env
+++ b/variables.env
@@ -7,10 +7,20 @@ APP_MILVUS__URL=http://milvus:19530
 APP_REDIS_DSN=redis://redis:6379/0
 NGC_CLI_ORG=default
 NGC_HOME=~/.cache/nvidia-nims
+
 LLM_NIM_0_MODEL=meta/llama3-8b-instruct
 LLM_NIM_0_NIM_VERSION=1.0.0
 LLM_NIM_0_NIM_GPUS=all
 LLM_NIM_1_MODEL=meta/llama3-8b-instruct
 LLM_NIM_1_NIM_VERSION=1.0.0
 LLM_NIM_1_NIM_GPUS=all
+
+RERANKER_MODEL=nvidia/nv-rerankqa-mistral-4b-v3
+RERANKER_NIM_VERSION=1.0.1
+RERANKER_NIM_GPUS=all
+
+EMBED_MODEL=nvidia/nv-embedqa-e5-v5
+EMBED_NIM_VERSION=1.0.1
+EMBED_NIM_GPUS=all
+
 SHELL=/bin/bash
