--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,18 @@
 confz==2.0.1
-fastapi==0.112.0
-gradio==4.40.0
+fastapi==0.115.0
+gradio==4.44.1
 grandalf==0.8
 jupyterlab>3.0
-langchain==0.2.12
-langchain-milvus==0.1.3
-langchain-nvidia-ai-endpoints==0.2.0
-langchain-openai==0.1.20
-langserve==0.2.2
-opentelemetry-instrumentation-fastapi==0.47b0
+langchain==0.3.3
+langchain-community==0.3.1
+langchain-milvus==0.1.5
+langchain-nvidia-ai-endpoints==0.3.0
+langchain-openai==0.2.2
+langserve==0.3.0
+opentelemetry-instrumentation-fastapi==0.48b0
 pydantic
-pymilvus==2.4.4
-redis==5.0.8
+pymilvus==2.4.7
+redis==5.1.1
 sse-starlette==2.1.3
-uvicorn==0.30.5
+uvicorn==0.31.0
 watchfiles==0.24.0
