--- a/variables.env
+++ b/variables.env
@@ -15,12 +15,12 @@ LLM_NIM_1_MODEL=meta/llama3-8b-instruct
 LLM_NIM_1_NIM_VERSION=1.0.0
 LLM_NIM_1_NIM_GPUS=all
 
-RERANKER_MODEL=nvidia/nv-rerankqa-mistral-4b-v3
-RERANKER_NIM_VERSION=1.0.1
-RERANKER_NIM_GPUS=all
+NV_RERANKQA_MISTRAL_4B_V3_MODEL=nvidia/nv-rerankqa-mistral-4b-v3
+NV_RERANKQA_MISTRAL_4B_V3_NIM_VERSION=1.0.2
+NV_RERANKQA_MISTRAL_4B_V3_NIM_GPUS=all
 
-EMBED_MODEL=nvidia/nv-embedqa-e5-v5
-EMBED_NIM_VERSION=1.0.1
-EMBED_NIM_GPUS=all
+NV_EMBEDQA_E5_V5_MODEL=nvidia/nv-embedqa-e5-v5
+NV_EMBEDQA_E5_V5_NIM_VERSION=1.0.1
+NV_EMBEDQA_E5_V5_NIM_GPUS=all
 
 SHELL=/bin/bash
