Docker Compose Integration (#65)
**Summary:**

This branch and PR integrates the new Docker Compose WB feature into the
NIM Anywhere project. Before merging, make sure to check this branch out
yourselves and go through a couple permutations of deploying and using
NIM Anywhere with each GPU profile to verify it works end to end as you
would expect. Note that I have only tested the 0, 1, and 2 GPU profiles,
because I don't have a machine with 3 GPUs. Any and all feedback is
appreciated.

**Files Added:**

compose.yaml - Docker compose file for NIM Anywhere

docs/0_2_docker_auth.md - Documentation for authenticating the host
docker client

**Files changed:**

.gitignore - I changed the gitignore so I could update the
code/config.yaml file, but then changed it back. I'm not quite sure why
it's still showing up as a file changed.

.project/spec.yaml - Removed the apps directory, unneeded mounts, and
applications that have been moved to compose

README.md - for details see each subsection's file

code/config.yaml - edited the local LLM NIM url to match the URL
accessible when deploying via compose

docs/0_4_1_configure.md (formerly 0_3_1_configure.md) - Removed the
sections configuring the mounts and NIM cache, as this is no longer
needed.

docs/0_5_start.md (formerly 0_4_start.md) - Changed startup directions
to use compose rather than starting each app separately.

docs/_TOC.md - Added a docker authentication section to TOC

**Files Renamed:**

Since I added a file docs/0_2_docker_auth, I had to rename other files
in the docs/ folder as follows:

0_2_0_install_nvwb.md → 0_3_0_install_nvwb.md
0_2_1_windows.md → 0_3_1_windows.md
0_2_2_macos.md → 0_3_2_macos.md
0_2_3_ubuntu.md → 0_3_3_ubuntu.md
0_2_4_remote_ubuntu.md → 0_3_4_remote_ubuntu.md
0_3_0_download.md → 0_4_0_download.md
0_3_1_configure.md → 0_4_1_configure.md (shows in github as deleting the
old one and adding new)
0_4_start.md → 0_5_start.md (shows in github as deleting the old one and
adding new)
0_5_knowledgeba

--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -16,9 +16,6 @@ layout:
 - path: docs/
   type: code
   storage: git
-- path: apps/
-  type: code
-  storage: git
 - path: data/
   type: data
   storage: gitlfs
@@ -125,66 +122,6 @@ execution:
       proxy:
         trim_prefix: false
       url: http://localhost:7070/
-  - name: Milvus Vector DB
-    type: custom
-    class: process
-    start_command: /project/apps/milvus.sh start
-    health_check_command: /project/apps/milvus.sh status
-    stop_command: /project/apps/milvus.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: milvus.io/favicon-32x32.png
-  - name: Redis
-    type: custom
-    class: process
-    start_command: /project/apps/redis.sh start
-    health_check_command: /project/apps/redis.sh status
-    stop_command: /project/apps/redis.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: redis.io/favicon.ico
-  - name: 'LLM NIM: llm-nim-0'
-    type: custom
-    class: process
-    start_command: /project/apps/llm-nim-0.sh start
-    health_check_command: /project/apps/llm-nim-0.sh status
-    stop_command: /project/apps/llm-nim-0.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: www.nvidia.com/favicon.ico
-  - name: 'LLM NIM: llm-nim-1'
-    type: custom
-    class: process
-    start_command: /project/apps/llm-nim-1.sh start
-    health_check_command: /project/apps/llm-nim-1.sh status
-    stop_command: /project/apps/llm-nim-1.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: www.nvidia.com/favicon.ico
-  - name: 'Embedder NIM: nv-embedqa-e5-v5'
-    type: custom
-    class: process
-    start_command: /project/apps/embedder_ms.sh start
-    health_check_command: /project/apps/embedder_ms.sh status
-    stop_command: /project/apps/embedder_ms.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: www.nvidia.com/favicon.ico
-  - name: 'Reranker NIM: nv-rerankqa-mistral-4b-v3'
-    type: custom
-    class: process
-    start_command: /project/apps/reranker_ms.sh start
-    health_check_command: /project/apps/reranker_ms.sh status
-    stop_command: /project/apps/reranker_ms.sh stop
-    user_msg: ""
-    logfile_path: ""
-    timeout_seconds: 60
-    icon_url: www.nvidia.com/favicon.ico
   - name: Chain Server
     type: custom
     class: webapp
@@ -218,11 +155,7 @@ execution:
     target: /project/
     description: Project directory
     options: rw
-  - type: host
-    target: /var/host-run/
-    description: Host's runtime files for Docker in Docker support.
-    options: ""
-  - type: host
-    target: /home/workbench/.cache/nvidia-nims/
-    description: A path where NIM containers can store and share their cache.
-    options: ""
+  - type: volume
+    target: /nvwb-shared-volume/
+    description: ""
+    options: volumeName=nvwb-shared-volume
