Front end knowledge base upload/delete functionality (#70)
This PR adds functionality for interacting with the knowledge base to
the chat frontend. This will allow users to upload PDF documents from
their computer to the knowledge base, view documents currently in the
knowledge base, and delete documents from the knowledge base.

**Files changed:**

project/spec.yaml - change start command for the chat front end to
reload when a file called "reload" is edited

code/frontend/pages/control/__init__.py - this is where the front end
changes are

code/frontend/pages/control/style.css - one style addition for the new
front end components

requirements.txt - pypdf added as it is needed for uploading a document

**Files added:**

code/frontend/_static/images/upload-button.png - Icon for the upload
file button

--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -126,10 +126,11 @@ execution:
     type: custom
     class: webapp
     start_command: export PROXY_PREFIX && export NGC_API_KEY && cd /project/code &&
-      APP_LOG_LEVEL=DEBUG uvicorn --log-level info --reload chain_server.server:app
-      --port 3030 --host 0.0.0.0 --timeout-graceful-shutdown 10 --reload-exclude 'frontend/*'
+      APP_LOG_LEVEL=DEBUG uvicorn --log-level info chain_server.server:app --port
+      3030 --host 0.0.0.0 --timeout-graceful-shutdown 10 --reload-exclude 'frontend/*'
       --reload-exclude 'evaluation/*' --reload-include '*.html' --reload-include '*.css'
-      --reload-include '*.yaml' --reload-include '*.js'
+      --reload-include '*.yaml' --reload-include '*.js' --reload --reload-include
+      reload
     health_check_command: ps aux |grep -v grep | grep chain_server.server:app
     stop_command: ps aux | grep chain_server.server:app | grep -v grep | awk '{print
       $2}' | xargs kill
